apps/iot/zigbee2mqtt/overlays/iot/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:95nhn2+8bE7z8Or+DQttWvrWCK+YmA==,iv:FmvBpAvN0/YKgDhb1q6CmLjApzbSP8Zzk/C7rVeAGa0=,tag:N2qLpy6gEmTM0uhq3tj2aA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: zigbee2mqtt
    name: zigbee2mqtt
    namespace: iot
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:v9slNLATsTg2aOE5oBmbN9th6DLom4RMWu5ZR5DiIoFLpKbG4g==,iv:UZwoHdOKAYt2qUcPNIhJ4YCXAoB54fmz139AcIpaLOs=,tag:6KR3tC4yGc3q6xql0TQBeQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: zigbee2mqtt
              port: 8080
    tls:
        domains:
            - main: ENC[AES256_GCM,data:QnUBlX7xY/Jd5cgbaVZpml7QbP+/IA==,iv:nhXTqWl/3zpB1bqvtgTqba+h3GXmV8ajOqRpufDTCLw=,tag:s/7dg+N0zqXmPxIZvn+tcg==,type:str]
              sans:
                - ENC[AES256_GCM,data:x20VnnPvdskBOtNXAh3vtydibQlBL3U=,iv:q9RcSPF4nc1mv6FHcVBw5GH9s9x3pjTpg5OAYY/rZUY=,tag:vjwMRBPESEnkw1MtKqMFnw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: zigbee2mqtt-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3MktGMlN2bjZJMTFMajV4
[...]
            w8c5qHh01uQHiHi1U4QFQUizRjNVib9Gu0ehqrwESX3eqgfzKH5jww==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-24T11:48:58Z"
    mac: ENC[AES256_GCM,data:3zkyH5Jmkk+QnBFXFXu4ObedYb2puR5Y9FEShr+DNfjMncifS8vS6icktJepWmqX0B8VRYHtEjNWxpE5tqVeofAOBBgDSImdv/TrToHAy63WPAVM318ytvntN9R2295yTltpF9HJuxTHs7W4QeSksDhhykBVMvb2FLmDr0YqLHU=,iv:GdNgPAd0QBeCwn110jek9SYOCO4up2l4kdQASQFB8EY=,tag:oj0vsEFyuiXIQOGtLvPfkg==,type:str]
    pgp:
        - created_at: "2024-06-22T20:24:01Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//ckdUFF47JENHLxFJOHZDfsPBDa38fqH2UMJ+x0+OW12I
[...]
            =3F81
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
